[package]
name = "skipcts-rs"
version = "0.1.0"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
edition = "2018"

[lib]
name = "skipcts"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.3"
ndarray = "0.13"
pyo3 = { git = "https://github.com/kngwyu/pyo3.git", branch = "pyclass-new-layout" }
anyhow = "1.0.26"
thiserror = "1.0.9"
rand = "0.7.2"
